apps/base/firefly/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: firefly
    labels:
        toolkit.fluxcd.io/tenant: sys
