apps/base/firefly/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: firefly
    namespace: firefly
spec:
    selector:
        matchLabels:
            app: firefly
    template:
        metadata:
            labels:
                app: firefly
        spec:
            containers:
                - name: firefly
                  image: fireflyiii/core:latest
                  imagePullPolicy: IfNotPresent
                  securityContext:
                      runAsUser: 33
                      runAsGroup: 33
                      runAsNonRoot: true
                      readOnlyRootFilesystem: false
                      allowPrivilegeEscalation: false
                      capabilities:
                          drop: ["ALL"]
                  livenessProbe:
                      tcpSocket:
                          port: 8080
                      initialDelaySeconds: 0
                      failureThreshold: 3
                      timeoutSeconds: 1
                      periodSeconds: 10
                  readinessProbe:
                      tcpSocket:
                          port: 8080
                      initialDelaySeconds: 0
                      failureThreshold: 3
                      timeoutSeconds: 1
                      periodSeconds: 10
                  startupProbe:
                      tcpSocket:
                          port: 8080
                      initialDelaySeconds: 0
                      failureThreshold: 30
                      timeoutSeconds: 1
                      periodSeconds: 5
                  resources:
                      limits:
                          cpu: "0.25"
                          memory: "256Mi"
                      requests:
                          cpu: "0.1"
                          memory: "128Mi"
                  ports:
                      - name: webui
                        containerPort: 8080
                        protocol: TCP
                  volumeMounts:
                      - name: data
                        mountPath: "/var/www/html/storage"
                      - name: tmp
                        mountPath: "/tmp"

            volumes:
                - name: data
                  hostPath:
                      path: "/mnt/SSD/app-storage/firefly"
                      type: Directory
                - name: tmp
                  emptyDir: {}

            securityContext:
                seccompProfile:
                    type: RuntimeDefault
                fsGroup: 33
                fsGroupChangePolicy: "OnRootMismatch"
