apps/base/firefly/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: allow-traefik
    namespace: firefly
spec:
    podSelector:
        matchExpressions:
            - key: app
              operator: In
              values: [firefly, firefly-importer]
    policyTypes: [Ingress]
    ingress:
        - from:
              - namespaceSelector:
                    matchLabels:
                        kubernetes.io/metadata.name: kube-system
                podSelector:
                    matchLabels:
                        app.kubernetes.io/name: traefik
          ports:
              - protocol: TCP
                port: 8080

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: allow-importer-to-firefly
    namespace: firefly
spec:
    podSelector:
        matchLabels:
            app: firefly
    policyTypes: [Ingress]
    ingress:
        - from:
              - podSelector:
                    matchLabels:
                        app: firefly-importer
          ports:
              - protocol: TCP
                port: 8080
